# stlviewer

./: CMakeLists.txt  Install.nsi  LICENCE  README  README.md  axisglwidget.cpp  axisgroupbox.cpp  axisgroupbox.h  dimensionsgroupbox.cpp  dimensionsgroupbox.h  glmdichild.h  glwidget.cpp  index.html  main.cpp  meshinformationgroupbox.cpp  params.json  propertiesgroupbox.cpp  propertiesgroupbox.h  stlfile.cpp  stlfile.h  stlviewer.cpp  stlviewer.pro  stlviewer.qrc  vector.h
.github/workflows/: deploy-site.yml
Sources/: axisglwidget.cpp  axisglwidget.h  axisgroupbox.cpp  axisgroupbox.h  dimensionsgroupbox.cpp  dimensionsgroupbox.h  documentwindow.cpp  documentwindow.h  glmdiarea.cpp  glmdiarea.h  glmdichild.cpp  glmdichild.h  glwidget.cpp  glwidget.h  main.cpp  meshinformationgroupbox.cpp  meshinformationgroupbox.h  propertiesgroupbox.cpp  propertiesgroupbox.h  settingsdialog.cpp  settingsdialog.h  stlfile.cpp  stlfile.h  stlviewer.cpp  stlviewer.h  stlviewer.qrc  vector.cpp  vector.h
cmake/: CPackConfig.cmake  stlviewer.desktop
resources/: dark.qss  light.qss  resources.qrc  shaders.qrc
resources/shaders/: fshader.glsl  vshader.glsl
site/: Gemfile  _config.yml  index.md
site/_layouts/: default.html
site/assets/css/: style.css
src/: AxisGLWidget.cpp  AxisGLWidget.hpp  AxisGroupBox.cpp  AxisGroupBox.hpp  DimensionsGroupBox.cpp  DimensionsGroupBox.hpp  GLWidget.cpp  GLWidget.hpp  GeometryEngine.cpp  GeometryEngine.hpp  GuiIface.cpp  GuiIface.hpp  MainWindow.cpp  MainWindow.hpp  MeshInformationGroupBox.cpp  MeshInformationGroupBox.hpp  PropertiesGroupBox.cpp  PropertiesGroupBox.hpp  RenderWidget.cpp  RenderWidget.hpp  STLFile.cpp  STLFile.hpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp  qt.hpp  vector.h  version.h.in
